[package]
name = "relay"
version = "0.3.2"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
prometheus = "0.13"
lazy_static = "1.4"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1"
globset = "0.4"
